# Chronos-Agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_service_heartbeat.py  0003_conversation_messages.py  0004_conversations.py
chronos_agent/: config.py  formatting.py  health.py  logging.py  main.py  metrics.py  observability.py  recovery.py  scheduler.py  templates.py  whisper.py
chronos_agent/agent/: __init__.py  core.py  react_graph.py  react_state.py  react_tools.py
chronos_agent/agent/nodes/: __init__.py  react_hitl.py  react_reasoner.py  react_tool_executor.py
chronos_agent/bot/: rate_limiter.py  setup.py  texts.py
chronos_agent/bot/handlers/: callbacks.py  commands.py  messages.py
chronos_agent/db/: engine.py  models.py
chronos_agent/google/: auth.py  client.py  sync.py  webhooks.py
chronos_agent/llm/: client.py  prompts.py
chronos_agent/memory/: classify.py  conversation.py  session.py
chronos_agent/tools/: __init__.py  _helpers.py  complete_task.py  create_event.py  create_task.py  exceptions.py  find_free_slots.py  get_events.py  get_tasks.py  move_event.py  notify_user.py  retry.py  sanitize.py
docs/: governance.md  llm-proxy.md  monitoring.md  product-proposal.md  quick-start.md  system-design.md
docs/diagrams/: 01-c4-context.md  02-c4-container.md  03-c4-component.md  04-workflow.md  05-data-flow.md
docs/specs/: 01-retriever.md  02-tools-apis.md  03-memory-context.md  04-agent-orchestrator.md  05-serving-config.md  06-observability-evals.md
monitoring/: prometheus.yml
scripts/: langfuse-bootstrap.sh  postgres-init.sh
services/litellm_proxy/: Dockerfile  config.yaml  guardrails_hook.py
tests/evals/: RESULTS.md  SCENARIO_CHECKLIST.md  run_asr_eval.py  run_nlu_eval.py  run_ratelimit_stress.py
(+5 files in other folders)
